Fix spacing and alignment on Project Home page

--- a/src/scss/_charts.scss
+++ b/src/scss/_charts.scss
@@ -47,8 +47,9 @@ $pie_chart_diameter: 100%; // NOTE: has to be equal to value in js passed to d3
         gap: 16px;
         box-sizing: border-box;
         align-items: center;
-        margin: 0 0 12px -16px;
+        margin: 0 0 8px -16px;
         padding: 8px 16px;
+        max-width: fit-content;
 
         .percentage-text {
             width: 55px;
@@ -59,11 +60,11 @@ $pie_chart_diameter: 100%; // NOTE: has to be equal to value in js passed to d3
 .chart_legends_container {
     display: flex;
     justify-content: center;
+    gap: 24px;
 }
 
 .chart_legend {
     &__container {
-        margin-right: 10px;
         white-space: nowrap;
     }
 
@@ -156,13 +157,17 @@ $pie_chart_diameter: 100%; // NOTE: has to be equal to value in js passed to d3
         padding-left: 0;
         flex-direction: column;
         gap: 12px;
-        margin-bottom: 32px;
     }
 
     .pie_chart {
         &__container {
             align-self: center;
+            max-width: 200px;
         }
+    }
+
+    .mb--40 {
+        margin-bottom: -20px;
     }
 
     .select-legend-container {
