--- a/src/scss/_margins.scss
+++ b/src/scss/_margins.scss
@@ -28,6 +28,10 @@
 }
 
 // Margins Bottom
+.mb--40 {
+  margin-bottom: -40px;
+}
+
 .mb-1 {
   margin-bottom: 6px;
 }
@@ -65,12 +69,17 @@
 }
 
 // Margins Left
+
+.ml-5 {
+  margin-left: 24px;
+}
+
 .ml-36 {
   margin-left: 36px;
 }
 
-.ml-5 {
-  margin-left: 24px;
+.ml-50 {
+  margin-left: 50px;
 }
 
 // Margins Right
